# Benasque2026_Hackathon

./: .gitignore  analyze_script.py  execute_script.py  fomulation.md  geocoded_places.csv  inputs.txt  main.py  map.ipynb  ortools_example.py  pyproject.toml  script.py
Code/: backend.py  backend_ibm_runtime.py  backend_info.py  fomulation.md
Code/Noisy/: Brisbane.json  Brussels.json  Sherbrooke.json
Code/Noisy/MaxCut/PCE_CUNQA/: database.py  family_qpus_1.sh  family_qpus_2.sh  graficar_photo_finish.py  graficas_tiempo.py  init_cunqa.sh  main_simul.py  main_simul_1.sh  main_simul_2.sh
Code/Noisy/MaxCut/PCE_CUNQA/src/: __init__.py  auxiliar.py  exe_experiments.py  exe_maxcut.py  loss_functions.py  utilities.py
Code/Not_Noisy/MaxCut/PCE_CUNQA/: database.py  family_qpus_1.sh  family_qpus_2.sh  graficar_photo_finish.py  graficas_tiempo.py  main_example_simulation.py  main_example_simulation.sh  main_simul.py  main_simul.sh  main_simul_1.sh  main_simul_2.sh
Code/Not_Noisy/MaxCut/PCE_CUNQA/src/: __init__.py  circuit_builder.py  exe_experiments.py  exe_maxcut.py  loss_functions.py  op_graph.py  utilities.py
Code/Not_Noisy/MaxCut/PCE_CUNQA/src/graphs/: Route_select_6.txt
data/: Hackathon - data.xlsx  Huesca.geojson  distances.csv  nodes.csv  place_map_v1.xlsx  place_map_vis_v1.ipynb  urban_distances.csv  urban_elevation.csv  urban_nodes.csv
src/: data_loader.py  decoding.py  extract_slon.py  problem.py  route_generator.py  route_specific_verifier.py  structural_verifier.py
tests/: test_route_generator.py  test_structural_verifier.py
(+13 files in other folders)
