[project]
name = "benasque2026-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "icecream>=2.1.10",
    "matplotlib>=3.10.8",
    "networkx==3.3",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "pandas>=3.0.1",
]
